code/tui/snapshots/inline/frame/config_closed.snap
---
source: code/tui/src/app/inline/frame_tests.rs
expression: "text(&render(&app, 100, 32))"
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
>                                                                                                   
────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
  ⏸ Manual                                                                             ← Dashboard
