code/tui/snapshots/inline/frame/config_compact.snap
---
source: code/tui/src/app/inline/frame_tests.rs
expression: text(&compact)
---
─ Config ───────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
   General    Providers    Issues    Network                                                        
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ Search configuration                                                                         │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
> Vim mode                                                                                   off    
  Show tips                                                                                   on    
  Memory diagnostics                                                                         off +  
  Automatic updates                                                                       Latest    
  Show Git changes as diff                                                                   off +  
  11 more below                                                                                     
                                                                                                    
  Enter change · r reset · Tab tabs · / search · Esc close
