code/tui/snapshots/inline/frame/hooks_inline_detail_wrapped.snap
---
source: code/tui/src/app/inline/frame_tests.rs
expression: "text(&render(&app, 48, 14))"
---
─ Hooks › user:hook:check ──────────────────────
                                                
  Event:       PreToolUse                       
  Enablement:  disabled                         
  Source file: /profile/config.toml             
  Tool names:  []                               
  Program:     /project with                    
  spaces/scripts/validate-changes.py            
  Arguments:                                    
                                                
> Edit configuration                            
  Ask Ash to configure                          
                                                
  Enter confirm · PgUp/PgDn scroll · r refresh
