code/tui/snapshots/inline/frame/model_list.snap
---
source: code/tui/src/app/inline/frame_tests.rs
expression: unpinned
---
                                                                                                    
    ▄  ▄     Ash Code v0.1.0                                                                        
  ▗█▛██▜█▖   Automatic model                                                                        
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ Model ────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ Search models                                                                                │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
> GPT Test    ← ██ ██ ██ → Medium                                                                   
                                                                                                    
  ↑↓ select · Tab setting · ←→ adjust · / search · p pin · Enter apply · Esc cancel
